software-center (1.1.11debian1) unstable; urgency=low

  * Merge 1.1.11.
  * softwarecenter/db/update.py:
    - Use logging.warning instead of logging.exception (Closes: #568941)
  * debian/rules:
    - Replace Ubuntu by Debian in some files when not building on Ubuntu.

 -- Julian Andres Klode <jak@debian.org>  Thu, 11 Feb 2010 17:36:10 +0100

software-center (1.1.11) lucid; urgency=low

  [ Michael Vogt ]
  * make action buttons in the appview insensitive while a action
    is in progress
  * added po/th.po:
    - thanks to Sira Nokyoonhtong 
  * merge lp:~tomeu/software-center/bug-fixes that makes the 
    "No screenshot available" text translatable, thanks to
    Tomeu Vizoso (LP: #443066)
  * softwarecenter/backend/aptd.py:
    - only set meta-data that is actually available (LP: #499392)
  * utils/update-software-center:
    - warn if locale can not be set (LP: #516266)
  * merge branch lp:~juliank/software-center/debian (many thanks)
  * merge lp:~mvo/software-center/spinner, this gives us inline
    progress

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - add support for using the up/down arrow keys to select
      items in the navigation pane (LP: #517271)
  * softwarecenter/distro/Ubuntu.py,
    po/software-center.pot:
    - fix typo for apps with unknown maintenance status,
      refreshed .pot file (LP: #519090) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Feb 2010 16:45:47 +0100

software-center (1.1.10debian1) unstable; urgency=low

  * Merge with Ubuntu.
  * debian/control:
    - Reindent with spaces only.
    - Require at least version 0.7.93.1 of python-apt.
    - Set Standards-Version to 3.8.4.
    - Conflicts, Replaces, Provides gnome-app-install.
  * softwarecenter/distro/Debian.py:
    - Replace import from aptutils with apt.utils.
  * data/icons/scalable/apps/softwarecenter.svg:
    - Remove the execute bit from the file.
  * man/update-software-center.8:
    - Add a manpage for update-software-center.